@@ -15,10 +15,13 @@ $layout = $blocks->getLayoutManager();
 // Handle requested actions.
 $layout->handle(Horde_Util::getFormData('action'),
                 (int)Horde_Util::getFormData('row'),
-                (int)Horde_Util::getFormData('col'),
-                Horde_Util::getFormData('url'));
+                (int)Horde_Util::getFormData('col'));
 if ($layout->updated()) {
     $prefs->setValue('myansel_layout', $layout->serialize());
+    if (Horde_Util::getFormData('url')) {
+        $url = new Horde_Url(Horde_Util::getFormData('url'));
+        $url->unique()->redirect();
+    }
 }
 
 $title = _("My Photos :: Add Content");
