@@ -2,6 +2,7 @@
 v2.0.1-git
 ----------
 
+[jan] Fix saving portal blocks.
 [mjr] Fix issue with carousel display on legacy uploader.
 [mjr] Fix issue where gallery still retained image count after it was empties
       of all images when using gallery cache.
